# PQ-ZK-eSIM

./: .gitignore  CMakeLists.txt  README.md  Test ctypes.py
app/: main.c  mode_switch.c
experiments/benchmarks/: bench_pqzkesim.c
include/: pq_zk_esim.h  pqzk_cert.h  pqzk_merkle.h  pqzk_mlkem.h
scripts/: Grid_search.py
src/: pq_zk_esim.c  pqzk_cert.c  pqzk_mlkem.c
src/algebra/: pq_zk_poly.c
src/algorithm/include/: pq_zk_esim.h
src/crypto/: pq-zk-crypto.c
src/internal/: params.h  pqzk_internal.h
src/platform/: pq_zk_nvram.c
src/tee/: pqzk_merkle.c
test/kat/: test_vectors.c
